# fixedassets

./: .gitignore  .vercelignore  Cargo.toml  README.md  Trunk.toml  index.html  input.css  middleware.js  sample_import.csv  tailwind.config.js  vercel.json
.claude/: launch.json  settings.local.json
docs/rules/: 00_overview.md  ID.md  JP.md  KH.md  LA.md  MM.md  MY.md  PH.md  SG.md  TH.md  VN.md
locales/: en.json  ja.json
public/: lp.html
scripts/: deploy.sh
src/: app.rs  auth.rs  i18n.rs  main.rs  router.rs
src/components/: asset_card.rs  asset_detail.rs  asset_form.rs  common.rs  dashboard.rs  layout.rs  mod.rs  photo_uploader.rs  wizard_form.rs
src/components/modals/: capex_info.rs  capex_modal.rs  cip_transfer_modal.rs  disposal_info.rs  dispose_modal.rs  impairment_info.rs  impairment_modal.rs  mod.rs  sell_modal.rs  transfer_info.rs  transfer_modal.rs
src/models/: accounting_standard.rs  asset.rs  company.rs  country_rules.rs  department.rs  depreciation.rs  mod.rs  photo.rs
src/pages/: admin.rs  asset_detail.rs  asset_list.rs  asset_register.rs  country_landing.rs  dashboard.rs  depreciation.rs  landing.rs  login.rs  mod.rs  report.rs  settings.rs  settings_account.rs  settings_department.rs  setup.rs  signup.rs  terms.rs
src/stores/: asset_store.rs  mod.rs  photo_store.rs
