[package]
name = "fixedassets"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
leptos_router = { version = "0.7" }
futures-channel = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "js", "serde"] }
chrono = { version = "0.4", features = ["serde", "wasmbind"] }
rust_decimal = { version = "1", features = ["serde-str"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "Storage",
    "console",
    "Document",
    "HtmlElement",
    "HtmlInputElement",
    "HtmlSelectElement",
    "HtmlTextAreaElement",
    "Event",
    "InputEvent",
    "SubmitEvent",
    "IdbFactory",
    "IdbOpenDbRequest",
    "IdbDatabase",
    "IdbTransaction",
    "IdbObjectStore",
    "IdbObjectStoreParameters",
    "IdbRequest",
    "IdbTransactionMode",
    "IdbCursorWithValue",
    "IdbCursorDirection",
    "IdbIndex",
    "IdbIndexParameters",
    "IdbKeyRange",
    "DomException",
    "Blob",
    "BlobPropertyBag",
    "Url",
    "FileReader",
    "FileList",
    "File",
    "DomStringList",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "HtmlImageElement",
    "ImageBitmap",
] }
sha2 = "0.10"
hex = "0.4"
getrandom = { version = "0.2", features = ["js"] }
log = "0.4"
console_log = "1"
console_error_panic_hook = "0.1"

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
